Added new fonts

--- a/template/post.html
+++ b/template/post.html
@@ -32,11 +32,10 @@
       <hr class="top-margin">
 
       <p class="top-margin">
-        <strong>Comment, contact:</strong> You can contact me on IRC <code>irc.libera.chat:6697</code> on channel <code>#mitjafelicijan</code>.
-        Or by going to <a href="https://web.libera.chat/#mitjafelicijan" target="_blank">https://web.libera.chat/#mitjafelicijan</a>.
+        <strong>Comment, contact:</strong> The easiest way to contact me is my writing me a message on <a href="https://t.me/mitjafelicijan" target="_blank">Telegram (https://t.me/mitjafelicijan)</a>.
       </p>
 
-      <p>You can also just write me an email at m@mitjafelicijan.com</p>
+      <p>You can also just write me an email at <a href="mailto:m@mitjafelicijan.com">m@mitjafelicijan.com</a>.</p>
 
       <hr class="top-margin">
 
