--- a/template/style.css
+++ b/template/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&display=swap');
+/*@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&display=swap');*/
 
 :root {
   --base-document-width: 640px;
@@ -28,7 +28,8 @@
 body {
   background: white;
   /*font-family: 'Times New Roman', Times, serif;*/
-  font-family: 'IBM Plex Sans', sans-serif;
+  /*font-family: 'IBM Plex Sans', sans-serif;*/
+  font-family: "SF Pro Text","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
   color: var(--base-color);
   font-size: var(--base-font-size);
   line-height: var(--base-line-heigh);
@@ -150,7 +151,7 @@ blockquote p {
 
 .navigation header .home {
   font-size: 130%;
-  font-weight: 900;
+  font-weight: 700;
 }
 
 .navigation header .home a {
