Added new post about synthesized DNA

--- a/template/post.html
+++ b/template/post.html
@@ -32,7 +32,7 @@
       <hr class="top-margin">
 
       <p class="top-margin">
-        <strong>Comment, contact:</strong> The easiest way to contact me is my writing me a message on <a href="https://t.me/mitjafelicijan" target="_blank">Telegram (https://t.me/mitjafelicijan)</a>.
+        <strong>Comment, contact:</strong> The easiest way to contact me is by writing me a message on <a href="https://t.me/mitjafelicijan" target="_blank">Telegram (https://t.me/mitjafelicijan)</a>.
       </p>
 
       <p>You can also just write me an email at <a href="mailto:m@mitjafelicijan.com">m@mitjafelicijan.com</a>.</p>
