--- a/template/style.css
+++ b/template/style.css
@@ -86,6 +86,7 @@ h1[itemtype="headline"] {
   margin-bottom: 20px;
   font-size: 230%;
   line-height: 1.2em;
+  font-weight: 800;
 }
 
 /* tables */
