Added front end search

--- a/template/_includes.html
+++ b/template/_includes.html
@@ -1,3 +1,4 @@
 <!-- user code -->
 
-<script src="/script.js?v=2022-01-30-01" async></script>
+<script src="/assets/general/elasticlunr.min.js"></script>
+<script src="/script.js?v=2022-07-22-02" async></script>
