--- a/template/_navigation.html
+++ b/template/_navigation.html
@@ -13,6 +13,8 @@
       <a href="/books.html">Books</a>
 
       <a href="/feed.rss" itemprop="url">RSS</a>
+
+      <a class="cursor search-trigger">Search</a>
     </nav>
   </header>
 </div>
