--- a/template/index.html
+++ b/template/index.html
@@ -55,6 +55,10 @@
 
     {{template "_footer.html"}}
 
+    {{template "_includes.html"}}
+
+    {{template "_search.html"}}
+
   </body>
 
 </html>
