--- a/template/_includes.html
+++ b/template/_includes.html
@@ -2,3 +2,7 @@
 
 <script src="/assets/general/elasticlunr.min.js"></script>
 <script src="/script.js?v=2022-07-22-02" async></script>
+
+<!-- Fathom - beautiful, simple website analytics -->
+<script src="https://cdn.usefathom.com/script.js" data-site="XHQARKXP" defer></script>
+<!-- / Fathom -->
