Added better mobile support

--- a/themes/simple/layouts/_default/single.html
+++ b/themes/simple/layouts/_default/single.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<main aria-role="main" class="container-blog">
+<main aria-role="main" class="container-blog px-6 md:p-0">
 
   <!-- Single article -->
   <article itemtype="http://schema.org/Article" class="mb-12">
