--- a/themes/simple/layouts/partials/header.html
+++ b/themes/simple/layouts/partials/header.html
@@ -1,4 +1,4 @@
-<div class="container-blog">
+<div class="container-blog px-6 md:p-0">
   <header class="flex py-4 mt-4 mb-6">
     <h3 class="flex-grow">
       <a href="/" itemprop="url" class="text-xl font-bold hover:bg-yellow-200">Mitja Felicijan</a>
@@ -12,7 +12,7 @@
       <a href="/curriculum-vitae.html" class="font-medium px-2 hover:bg-yellow-200">CV</a>
       <a href="/books.html" class="font-medium px-2 hover:bg-yellow-200">Books</a>
 
-      <a href="/index.xml" itemprop="url" class="font-medium px-2 hover:bg-yellow-200">RSS</a>
+      <a href="/index.xml" itemprop="url" class="font-medium px-2 hover:bg-yellow-200 hidden md:block">RSS</a>
     </nav>
   </header>
 </div>
