--- a/themes/simple/layouts/partials/footer.html
+++ b/themes/simple/layouts/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="container-blog text-gray-400 text-sm mb-12">
+<footer class="container-blog px-6 md:p-0 text-gray-400 text-sm mb-12">
   This website does not track you.
   Content is made available under the <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank" rel="noreferrer" class="underline hover:text-gray-800">CC BY 4.0 license</a> unless specified otherwise.
   Blog feed is available as <a href="/index.xml" target="_blank" class="underline hover:text-gray-800">RSS</a> feed.
