--- a/themes/simple/layouts/partials/head.html
+++ b/themes/simple/layouts/partials/head.html
@@ -172,4 +172,12 @@
     margin-block-start: 40px;
     margin-block-end: 40px;
   }
+
+  @media only screen and (max-width: 600px) {
+    article img {
+      max-width: 100%;
+      position: initial;
+      margin: 20px auto;
+    }
+  }
 </style>
