Added description and minor style fixes

--- a/themes/simple/layouts/partials/head.html
+++ b/themes/simple/layouts/partials/head.html
@@ -11,11 +11,12 @@
   rel="icon" type="image/x-icon" />
 
 <title>{{.Title}}</title>
+<meta name="description" content="{{ .Site.Params.description }}" />
 
 
 <style>
   .container-blog {
-    max-width: 600px;
+    max-width: 640px;
     margin: 0 auto;
   }
 
@@ -30,10 +31,10 @@
   }
 
   article img {
-    max-width: 120%;
-    width: 120%;
+    max-width: 110%;
+    width: 110%;
     position: relative;
-    left: -10%;
+    left: -5%;
     margin: 40px auto;
     display: block;
     border-radius: 5px;
