--- a/themes/simple/layouts/_default/list.html
+++ b/themes/simple/layouts/_default/list.html
@@ -18,7 +18,7 @@
 
   <!-- Projects I work on -->
   <section class="mb-12">
-    <h4 class="text-2xl font-bold mb-6">Side projects I work/worked on</h4>
+    <h4 class="text-2xl font-bold mb-6">Side projects I worked on</h4>
     <ul class="list-disc ml-6">
       <li><a href="https://git.mitjafelicijan.com/journalctl-proxy.git/" target="_blank" rel="noopener nofollow" class="underline hover:bg-yellow-200">journalctl-proxy - Exposes your systemd logs to web via web interface</a></li>
       <li><a href="https://git.mitjafelicijan.com/redis-marshal.git/" target="_blank" rel="noopener nofollow" class="underline hover:bg-yellow-200">redis-marshal - Lightweight Redis data exploration tool</a></li>
