--- a/themes/simple/layouts/_default/single.html
+++ b/themes/simple/layouts/_default/single.html
@@ -3,7 +3,7 @@
 
   <!-- Single article -->
   <article itemtype="http://schema.org/Article" class="mb-12">
-    <header>
+    <header class="mb-6">
       <h1 itemtype="headline" class="text-4xl font-extrabold mb-6">{{.Title}}</h1>
       <time class="text-gray-400 font-medium text-sm">Published on {{ .Date.Format "Monday Jan 2, 2006" }}</time>
     </header>
