--- a/themes/simple/layouts/_default/list.html
+++ b/themes/simple/layouts/_default/list.html
@@ -16,17 +16,24 @@
     </ul>
   </nav>
 
+  <hr class="border-2 border-gray-100 mb-10">
+
   <!-- Projects I work on -->
   <section class="mb-12">
     <h4 class="text-2xl font-bold mb-6">Side projects I worked on</h4>
     <ul class="list-disc ml-6">
-      <li><a href="https://git.mitjafelicijan.com/journalctl-proxy.git/" target="_blank" rel="noopener nofollow" class="underline hover:bg-yellow-200">journalctl-proxy - Exposes your systemd logs to web via web interface</a></li>
-      <li><a href="https://git.mitjafelicijan.com/redis-marshal.git/" target="_blank" rel="noopener nofollow" class="underline hover:bg-yellow-200">redis-marshal - Lightweight Redis data exploration tool</a></li>
-      <li><a href="https://git.mitjafelicijan.com/dna-encoding.git/" target="_blank" rel="noopener nofollow" class="underline hover:bg-yellow-200">dna-encoding - Tools for encoding files to DNA sequence</a></li>
-      <li><a href="https://git.mitjafelicijan.com/vertex.git/" target="_blank" rel="noopener nofollow" class="underline hover:bg-yellow-200">vertex - Create mock API's and add basic logic to simplify prototyping</a></li>
-      <li><a href="https://git.mitjafelicijan.com/scarecrow.git/" target="_blank" rel="noopener nofollow" class="underline hover:bg-yellow-200">scarecrow - Minimal configuration reverse proxy</a></li>
+      <li><a href="https://git.mitjafelicijan.com/journalctl-proxy.git/" target="_blank" rel="noopener nofollow" class="hover:bg-yellow-200">journalctl-proxy - Exposes your systemd logs to web via web interface</a></li>
+      <li><a href="https://git.mitjafelicijan.com/redis-marshal.git/" target="_blank" rel="noopener nofollow" class="hover:bg-yellow-200">redis-marshal - Lightweight Redis data exploration tool</a></li>
+      <li><a href="https://git.mitjafelicijan.com/dna-encoding.git/" target="_blank" rel="noopener nofollow" class="hover:bg-yellow-200">dna-encoding - Tools for encoding files to DNA sequence</a></li>
+      <li><a href="https://git.mitjafelicijan.com/vertex.git/" target="_blank" rel="noopener nofollow" class="hover:bg-yellow-200">vertex - Create mock API's and add basic logic to simplify prototyping</a></li>
+      <li><a href="https://git.mitjafelicijan.com/scarecrow.git/" target="_blank" rel="noopener nofollow" class="hover:bg-yellow-200">scarecrow - Minimal configuration reverse proxy</a></li>
     </ul>
   </section>
+
+  <hr class="border-2 border-gray-100 mb-10">
+
+  <!-- Openring -->
+  {{ partial "openring.html" . }}
 
 </main>
 {{ end }}
