--- a/themes/simple/layouts/partials/head.html
+++ b/themes/simple/layouts/partials/head.html
@@ -30,7 +30,7 @@
     color: #000;
   }
 
-  article img {
+  article.single img {
     max-width: 110%;
     width: 110%;
     position: relative;
@@ -40,7 +40,7 @@
     border-radius: 5px;
   }
 
-  article p {
+  article.single p {
     display: block;
     margin-block-start: 1em;
     margin-block-end: 1em;
@@ -48,7 +48,7 @@
     margin-inline-end: 0px;
   }
 
-  article ol {
+  article.single ol {
     display: block;
     list-style-type: decimal;
     margin-block-start: 1em;
@@ -58,13 +58,13 @@
     padding-inline-start: 40px;
   }
 
-  article ol>li>ol {
+  article.single ol>li>ol {
     margin-block-start: 0 !important;
     margin-block-end: 0 !important;
     padding-inline-start: 20px;
   }
 
-  article ul {
+  article.single ul {
     display: block;
     list-style-type: disc;
     margin-block-start: 1em;
@@ -74,7 +74,7 @@
     padding-inline-start: 40px;
   }
 
-  article code {
+  article.single code {
     font-family: monospace;
     background: rgb(255, 241, 177);
     border-radius: 5px;
@@ -82,7 +82,7 @@
     font-weight: 500;
   }
 
-  article pre {
+  article.single pre {
     background: unset;
     padding: unset;
 
@@ -95,13 +95,13 @@
     margin-block-end: 40px;
   }
 
-  article pre>code {
+  article.single pre>code {
     background: unset;
     padding: unset;
     font-weight: 400;
   }
 
-  article h2 {
+  article.single h2 {
     font-size: 180%;
     line-height: 1.2em;
     font-weight: 700;
@@ -109,7 +109,7 @@
     margin-block-end: 20px;
   }
 
-  article h3 {
+  article.single h3 {
     margin-block-start: 30px;
     margin-block-end: 20px;
     font-size: 160%;
@@ -133,7 +133,7 @@
     padding: 5px 10px;
   }
 
-  article blockquote {
+  article.single blockquote {
     margin-left: 40px;
     position: relative;
     margin-block-start: 30px;
@@ -141,7 +141,7 @@
     margin-right: 0;
   }
 
-  article blockquote:before {
+  article.single blockquote:before {
     content: ' ';
     background-image: url('/general/alert-light.svg');
     background-size: 30px 30px;
@@ -152,11 +152,11 @@
     top: 6px;
   }
 
-  article blockquote p {
+  article.single blockquote p {
     padding-left: 10px;
   }
 
-  article video {
+  article.single video {
     max-width: 100%;
     margin: 30px auto;
     display: block;
@@ -164,12 +164,12 @@
     background: #f8f8f8 !important;
   }
 
-  article audio {
+  article.single audio {
     width: 100%;
     outline: none;
   }
 
-  article .katex-display {
+  article.single .katex-display {
     margin-block-start: 40px;
     margin-block-end: 40px;
   }
