Fixed article links to now be underlined

--- a/themes/simple/layouts/partials/head.html
+++ b/themes/simple/layouts/partials/head.html
@@ -133,6 +133,10 @@
     padding: 5px 10px;
   }
 
+  article.single a {
+    text-decoration: underline;
+  }
+
   article.single blockquote {
     margin-left: 40px;
     position: relative;
