Fixed missing link decorations

--- a/themes/simple/layouts/_default/single.html
+++ b/themes/simple/layouts/_default/single.html
@@ -24,9 +24,9 @@
   {{ if in .Type "posts" }}
   <section class="mb-10">
     <p class="mb-4">
-      <strong>Comment, contact:</strong> The easiest way to contact me is by writing me a message on <a href="https://t.me/mitjafelicijan" target="_blank">Telegram (https://t.me/mitjafelicijan)</a>.
+      <strong>Comment, contact:</strong> The easiest way to contact me is by writing me a message on <a href="https://t.me/mitjafelicijan" target="_blank" class="underline hover:bg-yellow-100">Telegram (https://t.me/mitjafelicijan)</a>.
     </p>
-    <p>You can also just write me an email at <a href="mailto:m@mitjafelicijan.com">m@mitjafelicijan.com</a>.</p>
+    <p>You can also just write me an email at <a href="mailto:m@mitjafelicijan.com" class="underline hover:bg-yellow-100">m@mitjafelicijan.com</a>.</p>
   </section>
   {{ end }}
 
