--- a/themes/simple/layouts/_default/single.html
+++ b/themes/simple/layouts/_default/single.html
@@ -4,7 +4,7 @@
   <!-- Single article -->
   <article itemtype="http://schema.org/Article" class="single mb-12">
     <header class="mb-6">
-      <h1 itemtype="headline" class="text-4xl font-extrabold mb-6">{{.Title}}</h1>
+      <h1 itemtype="headline" class="text-4xl font-extrabold mb-6 leading-tight">{{.Title}}</h1>
 
       {{ if in .Type "posts" }}
       <time class="text-gray-400 font-medium text-sm">Published on {{ .Date.Format "Monday Jan 2, 2006" }}</time>
@@ -60,7 +60,7 @@
 
   <!-- Openring -->
   {{ if in .Type "posts" }}
-    {{ partial "openring.html" . }}
+  {{ partial "openring.html" . }}
   {{ end }}
 
 </main>
