--- a/themes/simple/layouts/partials/header.html
+++ b/themes/simple/layouts/partials/header.html
@@ -1,4 +1,4 @@
-<div class="container-blog px-6 md:p-0">
+<div class="container-blog mx-auto px-6 md:p-0">
   <header class="flex py-4 mt-4 mb-6">
     <h3 class="flex-grow">
       <a href="/" itemprop="url" class="text-xl font-bold hover:bg-yellow-100">Mitja Felicijan</a>
