--- a/themes/simple/layouts/_default/list.html
+++ b/themes/simple/layouts/_default/list.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<main aria-role="main" class="container-blog px-6 md:p-0">
+<main aria-role="main" class="container-blog mx-auto px-6 md:p-0">
 
   <h1 class="text-2xl font-bold mb-6">Blog posts</h1>
 
