--- a/themes/simple/layouts/partials/tailwind.html
+++ b/themes/simple/layouts/partials/tailwind.html
@@ -4,7 +4,6 @@
     /* Container */
     .container-blog {
       max-width: 700px;
-      margin: 0 auto;
     }
 
     /* User text selection */
@@ -100,6 +99,108 @@
     /* Katex */
     article.single .katex-display {
       @apply my-10;
+    }
+
+    /* Cactus Comments */
+    .comments img {
+      max-width: auto !important;
+      max-width: unset !important;
+      max-width: inherit !important;
+    }
+    .cactus-container .cactus-editor-textarea {
+      @apply border w-full px-3 py-2 outline-none rounded mb-2;
+    }
+
+    .cactus-container .cactus-editor-name input {
+      @apply border w-full px-3 py-2 mb-2 outline-none rounded;
+    }
+
+    .cactus-container .cactus-editor-name {
+      @apply mb-1;
+    }
+
+    /* Cactus: Buttons */
+    .cactus-editor-buttons {
+      @apply flex gap-2;
+    }
+
+    .cactus-container .cactus-button {
+      @apply text-base bg-gray-200 font-medium px-4 py-1 rounded;
+    }
+
+    .cactus-container .cactus-editor {
+      @apply mb-10;
+    }
+
+    /* Cactus: Comment List */
+    .cactus-container .cactus-comments-list {
+      @apply flex flex-col gap-8;
+    }
+
+    .cactus-container .cactus-comment {
+      @apply flex gap-4;
+    }
+
+    .cactus-container .cactus-comment .cactus-comment-avatar img {
+      @apply w-10 h-10 rounded-full;
+    }
+
+    .cactus-container .cactus-comment .cactus-comment-avatar-placeholder {
+      @apply w-10 h-10 rounded-full bg-gray-300;
+    }
+
+    .cactus-container .cactus-comment .cactus-comment-header {
+      @apply flex gap-2 items-center;
+    }
+
+    .cactus-container .cactus-comment .cactus-comment-header .cactus-comment-displayname {
+      @apply font-semibold;
+    }
+
+    .cactus-container .cactus-comment .cactus-comment-header .cactus-comment-time {
+      @apply text-gray-400 text-sm;
+    }
+
+    /* Cactus: Login */
+    .cactus-container .cactus-login-form-wrapper {
+      @apply border mb-6 p-3 relative rounded;
+    }
+
+    .cactus-container .cactus-login-form .cactus-login-close {
+      @apply absolute right-3 top-3 w-4 h-4;
+    }
+
+    .cactus-container .cactus-login-form .cactus-login-title {
+      @apply font-bold mb-4 mt-0 pt-0;
+    }
+
+    /* Cactus: Login with a button */
+    .cactus-container .cactus-login-form .cactus-login-client {
+      @apply mb-6;
+    }
+
+    .cactus-container .cactus-login-form .cactus-login-client-title {
+      @apply font-semibold mb-2;
+    }
+
+    /* Cactus: Login with credentials */
+    .cactus-container .cactus-login-form .cactus-login-credentials {
+    }
+
+    .cactus-container .cactus-login-form .cactus-login-credentials-title {
+      @apply font-semibold mb-1;
+    }
+
+    .cactus-container .cactus-login-form .cactus-login-field {
+      @apply flex gap-4 mb-2 items-center;
+    }
+
+    .cactus-container .cactus-login-form .cactus-login-label {
+      @apply w-20;
+    }
+
+    .cactus-container .cactus-login-form input {
+      @apply border px-2 py-1 rounded;
     }
 
   }
