Minor fixes to comments

--- a/themes/simple/layouts/partials/comments.html
+++ b/themes/simple/layouts/partials/comments.html
@@ -13,7 +13,8 @@
         serverName: "cactus.chat",
         siteName: "mitjafelicijan.com",
         commentSectionId: "{{.File}}",
-        updateInterval: 15
+        pageSize: 50,
+        updateInterval: 10,
       });
     });
   </script>
