--- a/themes/simple/layouts/partials/tailwind.html
+++ b/themes/simple/layouts/partials/tailwind.html
@@ -108,7 +108,7 @@
       max-width: inherit !important;
     }
     .cactus-container .cactus-editor-textarea {
-      @apply border w-full px-3 py-2 outline-none rounded mb-2;
+      @apply border w-full h-32 px-3 py-2 outline-none rounded mb-2;
     }
 
     .cactus-container .cactus-editor-name input {
@@ -125,7 +125,7 @@
     }
 
     .cactus-container .cactus-button {
-      @apply text-base bg-gray-200 font-medium px-4 py-1 rounded;
+      @apply text-base bg-gray-200 font-medium px-4 py-2 rounded;
     }
 
     .cactus-container .cactus-editor {
