--- a/themes/simple/layouts/partials/header.html
+++ b/themes/simple/layouts/partials/header.html
@@ -7,6 +7,13 @@
     <nav itemscope itemtype="http://schema.org/SiteNavigationElement" class="flex items-center gap-1">
       <meta itemprop="name" content="Main Menu">
 
+      <a href="/yap/feed.xml" rel="noopener nofollow" itemprop="url" class="hidden md:flex items-center gap-1 font-medium px-2 hover:bg-yellow-100">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-3 h-3">
+          <path d="M11.983 1.907a.75.75 0 00-1.292-.657l-8.5 9.5A.75.75 0 002.75 12h6.572l-1.305 6.093a.75.75 0 001.292.657l8.5-9.5A.75.75 0 0017.25 8h-6.572l1.305-6.093z" />
+        </svg>
+        <span>Microblog</span>
+      </a>
+
       <a href="https://git.mitjafelicijan.com" target="_blank" rel="noopener nofollow" itemprop="url" class="font-medium px-2 hover:bg-yellow-100">Git</a>
       <a href="https://files.mitjafelicijan.com" target="_blank" rel="noopener nofollow" itemprop="url" class="font-medium px-2 hover:bg-yellow-100">Files</a>
       <a href="/curriculum-vitae.html" class="font-medium px-2 hover:bg-yellow-100">CV</a>
