--- a/themes/simple/layouts/partials/tailwind.html
+++ b/themes/simple/layouts/partials/tailwind.html
@@ -125,7 +125,7 @@
     }
 
     .cactus-container .cactus-button {
-      @apply text-base bg-gray-200 font-medium px-6 py-2 rounded;
+      @apply text-base bg-gray-200 hover:bg-gray-300 font-medium px-6 py-2 rounded;
     }
 
     .cactus-container .cactus-editor {
