--- a/themes/simple/layouts/partials/header.html
+++ b/themes/simple/layouts/partials/header.html
@@ -1,21 +1,22 @@
 <div class="container-blog mx-auto px-6 md:p-0">
-  <header class="flex py-4 mt-4 mb-6">
-    <h3 class="flex-grow">
+  <header class="flex py-4 mt-4 mb-6 flex-col md:flex-row items-center ">
+    <h3 class="flex-grow mb-2 md:mb-0">
       <a href="/" itemprop="url" class="text-xl font-bold hover:bg-yellow-100">Mitja Felicijan</a>
     </h3>
 
     <nav itemscope itemtype="http://schema.org/SiteNavigationElement" class="flex items-center gap-1">
       <meta itemprop="name" content="Main Menu">
 
-      <a href="/yap/feed.xml" rel="noopener nofollow" itemprop="url" class="hidden md:flex items-center gap-1 font-medium px-2 hover:bg-yellow-100">
+      <a href="/yap/feed.xml" rel="noopener nofollow" itemprop="url" class="flex items-center gap-1 font-medium px-2 hover:bg-yellow-100">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-3 h-3">
           <path d="M11.983 1.907a.75.75 0 00-1.292-.657l-8.5 9.5A.75.75 0 002.75 12h6.572l-1.305 6.093a.75.75 0 001.292.657l8.5-9.5A.75.75 0 0017.25 8h-6.572l1.305-6.093z" />
         </svg>
-        <span>Microblog</span>
+        <span class="hidden md:block">Microblog</span>
+        <span class="block md:hidden">Microblog</span>
       </a>
 
       <a href="https://git.mitjafelicijan.com" target="_blank" rel="noopener nofollow" itemprop="url" class="font-medium px-2 hover:bg-yellow-100">Git</a>
-      <a href="https://files.mitjafelicijan.com" target="_blank" rel="noopener nofollow" itemprop="url" class="font-medium px-2 hover:bg-yellow-100">Files</a>
+      <a href="https://files.mitjafelicijan.com" target="_blank" rel="noopener nofollow" itemprop="url" class="font-medium px-2 hover:bg-yellow-100 hidden md:block">Files</a>
       <a href="/curriculum-vitae.html" class="font-medium px-2 hover:bg-yellow-100">CV</a>
       <a href="/books.html" class="font-medium px-2 hover:bg-yellow-100">Books</a>
 
