--- a/themes/simple/layouts/_default/baseof.html
+++ b/themes/simple/layouts/_default/baseof.html
@@ -4,7 +4,7 @@
 {{ partial "head.html" . }}
 
 <body>
-  {{ partial "header.html" . }}
+  {{ partial "navigation.html" . }}
   <div id="content">
     {{ block "main" . }}{{ end }}
   </div>
