--- a/themes/simple/layouts/partials/head.html
+++ b/themes/simple/layouts/partials/head.html
@@ -2,7 +2,8 @@
 <meta name="theme-color" content="#ffffff">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<link rel="alternate" type="application/rss+xml" href="/index.xml">
+<link rel="alternate" type="application/rss+xml" href="/index.xml" title="{{ .Site.Author.name }}">
+<link rel="alternate" type="application/rss+xml" href="/yap/feed.xml" title="Microblog - {{ .Site.Author.name }}">
 
 <link rel="icon" type="image/gif" href="/general/favicon.gif" />
 
