--- a/themes/simple/layouts/partials/comments.html
+++ b/themes/simple/layouts/partials/comments.html
@@ -1,9 +1,9 @@
 <section class="comments">
+  <h2 class="text-xl font-bold mb-2">Leave a comment</h2>
   <p class="mb-4">You can write me an email at <a href="mailto:m@mitjafelicijan.com" class="underline hover:bg-yellow-100">m@mitjafelicijan.com</a> or comment bellow.</p>
   <div id="comment-section"></div>
 
   <script type="text/javascript" src="https://latest.cactus.chat/cactus.js"></script>
-  <link rel="stylesheet" href="_https://latest.cactus.chat/style.css" type="text/css">
 
   <script>
     window.addEventListener('load', () => {
