--- a/themes/simple/layouts/_default/single.html
+++ b/themes/simple/layouts/_default/single.html
@@ -34,7 +34,7 @@
   <!-- Read more -->
   {{ if in .Type "posts" }}
   <section>
-    <h1 class="text-2xl font-bold mb-6">Read more from this site</h1>
+    <h2 class="text-2xl font-bold mb-6">Read more from this site</h2>
     <nav itemscope itemtype="https://schema.org/SiteNavigationElement" class="mb-12">
       <meta itemprop="name" content="Article list">
       <ul>
@@ -42,7 +42,7 @@
         {{ range $randomPosts }}
         <li class="mb-6">
           <time class="block text-gray-400 font-medium text-xs">{{ .Date.Format "Mon Jan 2, 2006" }}</time>
-          <a href="{{.Permalink}}" itemprop="url" class="hover:bg-yellow-100 font-medium">{{.Title}}</a>
+          <a href="/{{.Params.url}}" itemprop="url" class="hover:bg-yellow-100 font-medium">{{.Title}}</a>
           <p class="text-gray-600 text-sm">{{.Summary}}</p>
         </li>
         {{end}}
