Added bigger OG image

--- a/themes/simple/layouts/partials/head.html
+++ b/themes/simple/layouts/partials/head.html
@@ -17,4 +17,4 @@
 <meta property="og:title" content="{{ .Title }}">
 <meta property="og:description" content="{{ if .Summary }}{{ .Summary }}{{ else }}{{ .Site.Params.Description }}{{ end }}">
 <meta property="og:url" content="https://mitjafelicijan.com/{{ .Params.url }}">
-<meta property="og:image" content="https://mitjafelicijan.com/general/og.jpg">
+<meta property="og:image" content="https://mitjafelicijan.com/general/og-big.jpg">
