--- a/themes/simple/static/css/tailwind.css
+++ b/themes/simple/static/css/tailwind.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+* { cursor: url(/general/9front-cursor.png), auto; }
+
 /* Container */
 .container-blog {
   max-width: 700px;
