--- a/themes/simple/layouts/partials/side-projects.html
+++ b/themes/simple/layouts/partials/side-projects.html
@@ -1,10 +1,33 @@
 <section class="mb-12">
   <h2 class="text-2xl font-bold mb-6">Side projects I worked on</h2>
   <ul class="list-disc ml-6">
-    <li><a href="https://git.mitjafelicijan.com/journalctl-proxy.git/" target="_blank" rel="noopener nofollow" class="hover:bg-yellow-100">journalctl-proxy - Exposes your systemd logs to web via web interface</a></li>
-    <li><a href="https://git.mitjafelicijan.com/redis-marshal.git/" target="_blank" rel="noopener nofollow" class="hover:bg-yellow-100">redis-marshal - Lightweight Redis data exploration tool</a></li>
-    <li><a href="https://git.mitjafelicijan.com/dna-encoding.git/" target="_blank" rel="noopener nofollow" class="hover:bg-yellow-100">dna-encoding - Tools for encoding files to DNA sequence</a></li>
-    <li><a href="https://git.mitjafelicijan.com/vertex.git/" target="_blank" rel="noopener nofollow" class="hover:bg-yellow-100">vertex - Create mock API's and add basic logic to simplify prototyping</a></li>
-    <li><a href="https://git.mitjafelicijan.com/scarecrow.git/" target="_blank" rel="noopener nofollow" class="hover:bg-yellow-100">scarecrow - Minimal configuration reverse proxy</a></li>
+    <li>
+      <a href="https://git.mitjafelicijan.com/cord.h.git/" target="_blank" rel="noopener nofollow"
+        class="hover:bg-yellow-100">cord.h - Small C library for handling strings</a>
+    </li>
+    <li>
+      <a href="https://git.mitjafelicijan.com/mprogress.git/" target="_blank" rel="noopener nofollow"
+        class="hover:bg-yellow-100">mprogress - Tiny utility that displays progress bar in terminal</a>
+    </li>
+    <li>
+      <a href="https://git.mitjafelicijan.com/journalctl-proxy.git/" target="_blank" rel="noopener nofollow"
+        class="hover:bg-yellow-100">journalctl-proxy - Exposes your systemd logs to web via web interface</a>
+    </li>
+    <li>
+      <a href="https://git.mitjafelicijan.com/redis-marshal.git/" target="_blank" rel="noopener nofollow"
+        class="hover:bg-yellow-100">redis-marshal - Lightweight Redis data exploration tool</a>
+    </li>
+    <li>
+      <a href="https://git.mitjafelicijan.com/dna-encoding.git/" target="_blank" rel="noopener nofollow"
+        class="hover:bg-yellow-100">dna-encoding - Tools for encoding files to DNA sequence</a>
+    </li>
+    <li>
+      <a href="https://git.mitjafelicijan.com/vertex.git/" target="_blank" rel="noopener nofollow"
+        class="hover:bg-yellow-100">vertex - Create mock API's and add basic logic to simplify prototyping</a>
+    </li>
+    <li>
+      <a href="https://git.mitjafelicijan.com/scarecrow.git/" target="_blank" rel="noopener nofollow"
+        class="hover:bg-yellow-100">scarecrow - Minimal configuration reverse proxy</a>
+    </li>
   </ul>
 </section>
