--- a/themes/simple/layouts/partials/comments.html
+++ b/themes/simple/layouts/partials/comments.html
@@ -1,11 +1,20 @@
 <section class="comments">
   <h2 class="text-xl font-bold mb-2">Care to leave a comment?</h2>
-  <p class="mb-4">You can write me an email at
-    <a href="mailto:m@mitjafelicijan.com"
-      class="underline-offset-2 decoration-1 decoration-wavy underline hover:bg-yellow-100">m@mitjafelicijan.com</a>
-    or catch up with me
-    <a href="https://telegram.me/mitjafelicijan" target="_blank"
-      class="underline-offset-2 decoration-1 decoration-wavy underline hover:bg-yellow-100">on
-      Telegram</a>.
+
+  <p class="mb-10">
+    You can write me an email at
+    <a href="mailto:m@mitjafelicijan.com" class="underline-offset-2 decoration-1 decoration-wavy underline hover:bg-yellow-100">m@mitjafelicijan.com</a> or catch up with me
+    <a href="https://telegram.me/mitjafelicijan" target="_blank" class="underline-offset-2 decoration-1 decoration-wavy underline hover:bg-yellow-100">on Telegram</a>.
+    Other option is to also leave a comment below.
   </p>
+
+  <hr class="border-2 border-gray-100 mb-10">
+
+  <script src="https://utteranc.es/client.js"
+    repo="mitjafelicijan/blog-comments"
+    issue-term="pathname"
+    theme="github-light"
+    crossorigin="anonymous"
+    async>
+  </script>
 </section>
