Added Plan9 logo to the link card

--- a/themes/simple/layouts/_default/list.html
+++ b/themes/simple/layouts/_default/list.html
@@ -1,9 +1,13 @@
 {{ define "main" }}
 <main role="main" class="container-blog mx-auto px-6 md:p-0">
 
-  <a class="block rounded bg-yellow-50 hover:bg-yellow-100 border border-yellow-300 mb-10 px-4 py-3" href="https://bakingonagrill.com" target="_blank">
-    <p class="font-semibold">Baking on a Grill</p>
-    <p>Microblog and experiments about/with Plan9 operating system and other silly ideas.</p>
+  <!-- Plan9 microblog promotion link card -->
+  <a class="block rounded bg-yellow-300 hover:bg-yellow-400 mb-10 px-4 py-3 flex gap-4 items-center" href="https://bakingonagrill.com" target="_blank">
+    <img class="h-12" src="/general/9logo.png" alt="Plan9 Logo">
+    <div>
+      <p class="font-semibold">Baking on a Grill</p>
+    <p class="text-sm">Microblog and experiments about/with Plan9 operating system and other silly ideas.</p>
+    </div>
   </a>
 
   <h1 class="text-2xl font-bold mb-6">Blog posts</h1>
