Changed the copy of Plan9 link card

--- a/themes/simple/layouts/_default/list.html
+++ b/themes/simple/layouts/_default/list.html
@@ -2,7 +2,7 @@
 <main role="main" class="container-blog mx-auto px-6 md:p-0">
 
   <!-- Plan9 microblog promotion link card -->
-  <a class="block rounded bg-yellow-300 hover:bg-yellow-400 mb-10 px-4 py-3 flex gap-4 items-center" href="https://bakingonagrill.com" target="_blank">
+  <a class="block rounded bg-yellow-300 hover:bg-yellow-400 mb-10 px-4 py-3 flex gap-4 items-center" href="https://bakingonagrill.com" target="_blank" title="Baking on a Grill, Plan9 experiments">
     <img class="h-12" src="/general/9logo.png" alt="Plan9 Logo">
     <div>
       <p class="font-semibold">Baking on a Grill</p>
