Changed microblog to picoblog

--- a/themes/simple/layouts/_default/list.html
+++ b/themes/simple/layouts/_default/list.html
@@ -6,7 +6,7 @@
     <img class="h-12" src="/general/9logo.png" alt="Plan9 Logo">
     <div>
       <p class="font-semibold">Baking on a Grill</p>
-    <p class="text-sm">Microblog and experiments about/with Plan9 operating system and other silly things.</p>
+    <p class="text-sm">Picoblog and experiments about/with Plan9 operating system and other silly things.</p>
     </div>
   </a>
 
