--- a/themes/simple/static/css/tailwind.css
+++ b/themes/simple/static/css/tailwind.css
@@ -63,6 +63,24 @@ article.single img {
   @apply rounded w-full !bg-gray-50 my-8;
 }
 
+article.single img[src*="?style=bigimg"] {
+  transform: scale(1.25);
+  margin-top: 100px;
+  margin-bottom: 100px;
+  transform-origin: center center;
+
+  image-rendering: crisp-edges;
+  image-rendering: -webkit-optimize-contrast;
+}
+
+@media (max-width: 900px) {
+  article.single img[src*="?style=bigimg"] {
+    transform: initial;
+    margin-top: initial;
+    margin-bottom: initial;
+  }
+}
+
 article.single video {
   @apply rounded w-full !bg-gray-50;
 }
