--- a/themes/simple/layouts/_default/notes.html
+++ b/themes/simple/layouts/_default/notes.html
@@ -2,8 +2,13 @@
 <main role="main" class="container-blog mx-auto px-6 md:p-0">
 
   <section class="mb-6">
-    <h1 class="text-2xl font-bold">Notes, notes and notes</h1>
-    <p class="text-gray-600 italic">Notes about things I learn, things I do, things I want to remember, but never do.</p>
+    <h1 class="text-2xl font-bold mb-2">Notes, notes and notes</h1>
+    <p class="text-gray-600 italic">
+      Notes about things I learn, things I do, things I want to remember,
+      but never do. You can subscribe to this
+      <a href="/notes.xml" class="underline">RSS feed</a>
+      which contains only the notes without the blog posts.
+    </p>
   </section>
 
   <hr class="border-2 border-gray-100 mb-12">
