--- a/themes/simple/layouts/_default/notes.html
+++ b/themes/simple/layouts/_default/notes.html
@@ -21,12 +21,13 @@
       <div class="mb-10">
         <article class="mb-5 single note" itemscope itemtype="http://schema.org/Article">
           <h2 class="text-xl font-medium notes-heading">{{.Title}}</h2>
-          <p class="text-gray-600 _italic text-sm">
+          <p class="text-gray-600 _italic text-sm flex flex-col md:flex-row gap-1">
             <time datetime="{{ .Date.Format "2006-01-02" }}" itemprop="datePublished">
               {{ .Date.Format "Monday Jan 2, 2006" }}
             </time>
 
             {{ if .Params.tags }}
+            <span class="hidden md:inline-block">
               <span>with tags</span>
               <span class="inline-flex flex-row gap-1">
                 <span>(</span>
@@ -35,6 +36,7 @@
                 {{ end }}
                 <span>)</span>
               </span>
+            </span>
             {{ end }}
           <div class="content">
             {{ .Content | safeHTML }}
